--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <!doctype html>
-<html lang="fa" dir="rtl">
+<html lang="en" dir="ltr" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicons/fuchsia-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ایزی لرن</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body class="font-vazir bg-gray-50">
+  <body
+    class="rtl:font-vazir ltr:font-roboto bg-sky-50 text-sky-900 dark:bg-slate-800 dark:text-slate-50"
+  >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
