refactor(sidebar): side bar styles and logic

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body
-    class="rtl:font-vazir ltr:font-roboto bg-sky-50 text-sky-900 dark:bg-slate-800 dark:text-slate-50"
+    class="rtl:font-vazir ltr:font-roboto bg-slate-100 text-sky-900 dark:bg-slate-900 dark:text-slate-50"
   >
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
